--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.4.5",
     "@tailwindcss/postcss": "^4.0.7",
+    "@vercel/blob": "^0.27.1",
     "lottie-react": "^2.4.1",
     "next": "15.1.7",
     "next-seo": "^6.6.0",
