--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/blob": "^0.27.1",
     "lottie-react": "^2.4.1",
     "next": "15.1.7",
+    "next-cloudinary": "^6.16.0",
     "next-seo": "^6.6.0",
     "next-video": "^2.1.0",
     "player.style": "^0.1.4",
