--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.4.5",
+    "@next/env": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@vercel/blob": "^0.27.1",
     "lottie-react": "^2.4.1",
