--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@next/env": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@vercel/blob": "^0.27.1",
+    "lenis": "^1.1.22",
     "lottie-react": "^2.4.1",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "next-cloudinary": "^6.16.0",
     "next-seo": "^6.6.0",
     "next-video": "^2.1.0",
+    "next-view-transitions": "^0.3.4",
     "player.style": "^0.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
